fix line-heights and spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -100,8 +100,12 @@ pre {
     margin: 1em 0;
     overflow-x: auto;
 }
-p code {
-    font-weight: 700;
+main {
+    display: block;
+    margin: 2em 0 1.5em 0;
+    @media screen and (min-width: 500px) {
+        margin: 5em 0 1.5em 0;
+    }
 }
 
 // Index
@@ -109,10 +113,7 @@ p code {
     .connect {
         display: block;
         text-align: left;
-        margin: 0;
-        @media screen and (min-width: 500px) {
-            margin: 5em 0 1.5em 0;
-        }
+        margin: 0 0 3em 0;
         li {
             display: inline-block;
         }
@@ -130,20 +131,21 @@ p code {
 }
 
 // Article
-article {
-    padding: 0.25em 0;
-      @media screen and (min-width: 500px) {
-            margin: 5em 0 1.5em 0;
-        }
+article {    
     h2 {
         margin-bottom: -0.25em;
         text-transform: uppercase;
-        letter-spacing: 0.05em;
+        letter-spacing: 0.0475em;
         font-size: 1.25em;
         color: $accent;
+        line-height: 1.125;
     }
     date {
         margin-bottom: 1.5em;
         display: block;
+        font-weight: 700;
+    }
+    p code {
+        font-weight: 700;
     }
 }
